@@ -1,4 +1,4 @@
-# $Id$
+# $Id: TrialSiteBot.properties 879 2004-12-29 03:39:22Z mog $
 passedunique=[passed] ${user} passed unique ${name}, next period begins after ${bonusexpires}
 trialunique=[failed] ${user} is on unique ${name} with ${bytesleft} left until ${uniqueexpires}
 
@@ -6,3 +6,6 @@ passed=[passed] ${user} passed ${name} with ${bytespassed}, next period begins $
 trial=[failed] ${user} is on ${name} with ${bytesleft} left until ${expires}
 
 exempt=[exempt] ${user} is not on trial/quota
+nosuchuser=[passed] No such user: ${user}
+
+disabled=Trials disabled
